# Mizzou-Under-classes

./: README.md
JACLCapstone/: .gitignore  .project  README.md  links.txt
JACLCapstone/Story/: Chapter1.txt
JACLCapstone/app/: .gitignore  build.gradle
JACLCapstone/app/core/assets/data/: collectibles.xml  enemies.xml  items.xml
JACLCapstone/app/core/assets/dialogue/: chapter1-dialog.txt
JACLCapstone/app/core/assets/hud/fonts/: dialogue.fnt  font12.fnt  font16.fnt  font20.fnt  font24.fnt  font28.fnt  font32.fnt  font36.fnt  font40.fnt  font44.fnt  font48.fnt  font52.fnt  font56.fnt  font60.fnt
JACLCapstone/app/core/assets/maps/Chapter1/: chapter1-1.tmx  chapter1-2.tmx  chapter1-3.tmx  chapter1-4.tmx  chapter1-5.tmx
JACLCapstone/app/core/assets/maps/Chapter2/: chapter2-1.tmx  chapter2-2.tmx  chapter2-3-1.tmx  chapter2-3.tmx  chapter2-4.tmx  chapter2-5.tmx  chapter2-6.tmx
JACLCapstone/app/core/assets/maps/Chapter3/: chapter3-1.tmx  chapter3-2.tmx  chapter3-3.tmx  chapter3-4.tmx  chapter3-5.tmx  chapter3-6.tmx  chapter3-7.tmx
JACLCapstone/app/core/assets/maps/Chapter4/: chapter4-1.tmx  chapter4-2.tmx  chapter4-3.tmx  chapter4-4.tmx  chapter4-5.tmx
JACLCapstone/app/core/assets/maps/General/: prisim_city.tmx  prismcity.tmx
JACLCapstone/app/core/assets/maps/Testing/: boss_concept_2.tmx  test.tmx  test2.tmx  (+1 more)
JACLCapstone/app/core/assets/sounds/: soundsForLevels.rtf
JACLCapstone/app/core/src/tutorial/: AssetsTutorial.java  InputTutorial.java  ScreenTutorialGame.java  TutorialGame.java
JACLCapstone/app/desktop/: build.gradle
JACLCapstone/app/desktop/saves_old/: test.xml
JACLCapstone/item/: Creatures.xml  Items.xml
JACLCapstone/versions/: v0.3a.md  v0.4a.md  v0.5a.md
OS_FS/: CMakeLists.txt  README  README.txt  README~
OS_FS/include/: S15Filesystem.h
OS_FS/src/: S15Filesystem.c  S15Filesystem.c~  test_S15FS.c
VBS_gjs/: CMakeLists.txt  README  SAMPLE_TEST_OUTPUT
VBS_gjs/doc/: Doxyfile  Doxyfile.in  header.html
VBS_gjs/include/: VirtualBlockStorage.h  bitmap.h
VBS_gjs/src/: VBS_test.c  VBS_test_storage.c  VirtualBlockStorage.c  bitmap.c
(+66 files in other folders)
